--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.html linguist-detectable=false
-wwwroot/*.js linguist-detectable=false
-wwwroot/*.css linguist-detectable=false
+*.html linguist-vendored=true
+wwwroot/* linguist-vendored=true
 *.cs linguist-language=C#
 *.razor linguist-language=C#
